--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,195 @@
 __pycache__/model.cpython-312.pyc
 model.py
 log/log.txt
+train.py
+llm_learning
+mistral2/task01_post_norm_instability.py
+mistral2/task02_attention_scaling.py
+mistral2/task03_causal_mask_direction.py
+mistral2/task04_softmax_dimension.py
+mistral2/task05_mask_value_zero_vs_inf.py
+mistral2/task06_reshape_contiguity.py
+mistral2/task07_rope_on_values.py
+mistral2/task08_mha_head_splitting.py
+mistral2/task09_dropout_training_flag.py
+mistral2/task10_v1_detach_in_generation.py
+mistral2/task10_v2_detach_in_generation.py
+mistral2/task11_zero_grad_missing.py
+mistral2/task12_grad_clip_placement.py
+mistral2/task13_grad_accumulation_scale.py
+mistral2/task14_frozen_params_optimizer.py
+mistral2/task15_eval_mode_missing.py
+mistral2/task16_loss_tensor_logging.py
+mistral2/task17_no_grad_inference.py
+mistral2/task18_scheduler_step_frequency.py
+mistral2/task19_logsoftmax_stability.py
+mistral2/task20_crossentropy_onehot.py
+mistral2/task21_ignore_padding_loss.py
+mistral2/task22_kl_div_input.py
+mistral2/task23_bce_vs_bcewithlogits.py
+mistral2/task24_broadcasting_residual.py
+mistral2/task25_einsum_attention.py
+mistral2/task26_slice_dimension.py
+mistral2/task27_kv_cache_concat_dim.py
+mistral2/task28_kv_cache_recompute.py
+mistral2/task29_top_p_shift.py
+mistral2/task30_temperature_zero_div.py
+mistral2/task31_gqa_kv_expansion.py
+mistral2/task32_sliding_window_boundary.py
+mistral2/task33_mixed_precision_grad_scaler.py
+mistral2/task34_ddp_gradient_sync.py
+mistral2/task35_gradient_checkpoint_inplace.py
+mistral2/task36_lora_merge_bug.py
+mistral2/task37_flash_attention_mask_format.py
+mistral2/task38_speculative_decoding_accept.py
+mistral2/task39_beam_search_length_penalty.py
+mistral2/task40_tensor_parallel_split.py
+mistral2/task41_weight_decay_embeddings.py
+mistral2/task42_layernorm_epsilon_fp16.py
+mistral2/task43_attention_sink_position.py
+mistral2/task44_rmsnorm_vs_layernorm.py
+mistral2/task45_alibi_position_bias.py
+mistral2/task46_moe_load_balancing.py
+mistral2/task47_rope_ntk_scaling.py
+mistral2/task48_dpo_reference_detach.py
+mistral2/task49_contrastive_temperature.py
+mistral2/task50_ddp_grad_accumulation_sync.py
+mistral2/task51_activation_memory_checkpoint.py
+mistral2/task52_kv_cache_position_tracking.py
+mistral2/task53_prefix_cache_collision.py
+mistral2/task54_continuous_batching_order.py
+mistral2/task55_quantization_calibration.py
+mistral2/task56_lora_target_modules.py
+mistral2/task57_fsdp_sharding_memory.py
+mistral2/task58_activation_recomputation.py
+mistral2/task59_mqa_projection_dim.py
+mistral2/task60_generation_stopping_criteria.py
+mistral2/__pycache__/task30_temperature_zero_div.cpython-310.pyc
+interview/task01_multi_head_self_attention.py
+interview/task02_gqa_mqa.py
+interview/task02_gqa_repeat.py
+interview/task03_self_cross_attention.py
+interview/task04_norms.py
+interview/task05_ffn.py
+interview/task06_positional_embeddings_original.py
+interview/task06_positional_embeddings.py
+interview/task07_masking_strategies.py
+interview/task08_moe.py
+interview/task09_kmeans_broadcasting.py
+interview/task10_transformer_block.py
+interview/task11_lora.py
+interview/task12_mini_llm.py
+mistral_pretaprations/README.md
+mistral_pretaprations/reread_task16_pairwise_distance.py
+mistral_pretaprations/task01_sliding_window_mask.py
+mistral_pretaprations/task02_gqa_expansion.py
+mistral_pretaprations/task03_rope_frequencies.py
+mistral_pretaprations/task04_moe_top_k_gating.py
+mistral_pretaprations/task05_alibi_bias.py
+mistral_pretaprations/task06_gradient_checkpointing.py
+mistral_pretaprations/task07_weight_tying.py
+mistral_pretaprations/task08_cosine_schedule.py
+mistral_pretaprations/task09_rmsnorm.py
+mistral_pretaprations/task10_fsdp_wrapping.py
+mistral_pretaprations/task11_dpo_loss.py
+mistral_pretaprations/task12_ppo_clip.py
+mistral_pretaprations/task13_label_smoothing.py
+mistral_pretaprations/task14_contrastive_loss.py
+mistral_pretaprations/task15_perplexity.py
+mistral_pretaprations/task18_pad_sequences.py
+mistral_pretaprations/task19_one_hot.py
+mistral_pretaprations/task20_sort_batch.py
+mistral_pretaprations/task21_generation_bug.py
+mistral_pretaprations/task22_broadcasting_bias.py
+mistral_pretaprations/task23_dropout_scaling.py
+mistral_pretaprations/task24_batchnorm_momentum.py
+mistral_pretaprations/task25_fp16_softmax.py
+mistral_pretaprations/task26_kv_cache.py
+mistral_pretaprations/task27_speculative_decoding.py
+mistral_pretaprations/task28_tensor_parallel.py
+mistral_pretaprations/task29_top_p_sampling.py
+mistral_pretaprations/task30_dataloader_shuffle.py
+mistral_pretaprations/task31_modulelist.py
+mistral_pretaprations/task32_model_apply.py
+mistral_pretaprations/task33_detach_hidden.py
+mistral_pretaprations/task34_cudnn_benchmark.py
+mistral_pretaprations/task35_nan_handling.py
+mistral_pretaprations/task36_grad_accumulation.py
+mistral_pretaprations/task37_inference_mode.py
+mistral_pretaprations/task38_lazy_linear.py
+mistral_pretaprations/task39_resize_embeddings.py
+mistral_pretaprations/task40_bfloat16_vs_float16.py
+mistral_pretaprations/task41_stable_sigmoid.py
+mistral_pretaprations/task43_kl_divergence.py
+mistral_pretaprations/task44_sparse_matmul.py
+mistral_pretaprations/task45_manual_conv.py
+mistral_pretaprations/task46_ntk_scaling.py
+mistral_pretaprations/task47_gumbel_softmax.py
+mistral_pretaprations/task48_orthogonal_init.py
+mistral_pretaprations/task49_jacobian.py
+mistral_pretaprations/task50_hessian_vector.py
+mistral_pretaprations/todo_task17_view_complex.py
+mistral_pretaprations/__pycache__/task01_sliding_window_mask.cpython-312.pyc
+mistral_pretaprations/__pycache__/task02_gqa_expansion.cpython-312.pyc
+mistral_pretaprations/tests/__init__.py
+mistral_pretaprations/tests/conftest.py
+mistral_pretaprations/tests/pytest.ini
+mistral_pretaprations/tests/test_01_sliding_window_mask.py
+mistral_pretaprations/tests/test_02_gqa_expansion.py
+mistral_pretaprations/tests/test_03_rope_frequencies.py
+mistral_pretaprations/tests/test_04_moe_gating.py
+mistral_pretaprations/tests/test_05_alibi_bias.py
+mistral_pretaprations/tests/test_06_to_10_training.py
+mistral_pretaprations/tests/test_11_to_15_losses.py
+mistral_pretaprations/tests/test_16_to_20_tensors.py
+mistral_pretaprations/tests/test_21_to_25_silent_bugs.py
+mistral_pretaprations/tests/test_26_to_30_systems.py
+mistral_pretaprations/tests/test_31_to_40_pytorch_traps.py
+mistral_pretaprations/tests/test_41_to_50_numerics.py
+mistral_pretaprations/tests/test_all.py
+mistral_pretaprations/tests/__pycache__/__init__.cpython-312.pyc
+mistral_pretaprations/tests/__pycache__/conftest.cpython-312-pytest-9.0.2.pyc
+mistral_pretaprations/tests/__pycache__/test_01_sliding_window_mask.cpython-312-pytest-9.0.2.pyc
+mistral_pretaprations/tests/__pycache__/test_02_gqa_expansion.cpython-312-pytest-9.0.2.pyc
+mistral3/do_task05_optimization_scheduling.py
+mistral3/do_task07_production_features.py
+mistral3/task01_elementary_implementations.py
+mistral3/task02_data_handling.py
+mistral3/task03_training_loop.py
+mistral3/task04_model_components.py
+mistral3/task06_debugging_bugfixes.py
+mistral3/task08_edge_cases.py
+mistral3/__pycache__/task04_model_components.cpython-312.pyc
+mistral4/__init__.py
+mistral4/task_interview_prep.py
+mistral4/task01_moe_routing.py
+mistral4/task02_kv_cache.py
+mistral4/task03_training_losses.py
+mistral4/task04_rope_scaling.py
+mistral4/task05_sequence_packing.py
+mistral4/task06_distributed_training.py
+mistral4/task07_evaluation_decoding.py
+mistral4/task08_kmeans_vectorized.py
+mistral4/task09_async_await.py
+mistral4/task10_rlhf_dpo.py
+mistral4/task11_grpo.py
+prepare_vla/README.md
+prepare_vla/task01_vectorized_iou.py
+prepare_vla/task02_focal_loss.py
+prepare_vla/task03_ema_weights.py
+prepare_vla/task04_causal_mask.py
+prepare_vla/task05_image_patches.py
+prepare_vla/task06_rope_embeddings.py
+prepare_vla/task07_action_tokenizer.py
+prepare_vla/task08_vla_labels.py
+prepare_vla/2/__init__.py
+prepare_vla/2/task01_iou.py
+prepare_vla/2/task02_conv2d.py
+prepare_vla/2/task03_softmax_temperature.py
+prepare_vla/2/task04_scaled_attention.py
+prepare_vla/2/task05_causal_mask.py
+prepare_vla/2/task06_rmsnorm.py
+prepare_vla/2/task07_patchify.py
+prepare_vla/2/task08_clip_loss.py
+prepare_vla/2/task09_action_discretization.py
+prepare_vla/2/task10_action_chunking.py
